# trustagency

./: .env.example  .env.prod.example  .gitignore  00_DELIVERY_SUMMARY.md  A2_COMPLETION_CONFIRMED.md  A2_FINAL_REPORT.md  A2_MILESTONE_SUMMARY.md  A2_QUICK_STATUS.md  A2_VERIFICATION_CHECKLIST.md  A3_COMPLETION_REPORT.md  A3_FINAL_DELIVERY_CHECKLIST.md  A3_PROGRESS_UPDATE.md  A3_SESSION_REPORT_01.md  A4_FINAL_CHECKLIST.md  A4_READY_TO_LAUNCH.md  A4_STARTUP_GUIDE.md  A4_STARTUP_SUMMARY.md  A6_COMPLETION_SUMMARY.md  A7_QUICK_START.md  A7_SESSION_SUMMARY.txt  A8_NGINX_DOCKER_COMPLETION.md  A8_PUSH_READY_CHECKLIST.md  ACCEPTANCE_TEST.sh  ADMIN_PANEL_PROFESSIONAL.md  API_PERFORMANCE_REPORT_20251123_223238.md  AUTO_SAVE_SCRIPT.sh  BACKEND_COMPLETE_VERIFICATION.md  BACKEND_TASKS_CHECKLIST.md  BUGS_AND_TASKS_PRIORITY.md  BUG_013_014_015_ACCEPTANCE_REPORT.md  BUG_013_014_015_ANALYSIS.md  BUG_DIAGNOSIS_AND_FIX.md  BUG_FIXES_COMPLETED.md  BUG_FIXES_SUMMARY.md  BUG_FIX_FINAL_SESSION.md  BUG_FIX_SUMMARY.md  BUG_REFACTOR_VERIFICATION.md  CHECK_CONTAINERS.sh  CHECK_CONTAINER_CODE.sh  CODE_REVIEW_COMPLETE.md  (+247 more)
backend/: .env.example  .gitignore  CREATE_FORM_VERIFICATION.md  Dockerfile  FINAL_FIX_REPORT.md  FINAL_SOLUTION_REPORT.md  INIT_MANUAL.md  INSTANT_VERIFICATION.md  OPTIMIZATION_SUMMARY.md  PLATFORM_DETAILS_IMPLEMENTATION.md  PROJECT_COMPLETION_CHECKLIST.md  QUICK_REFERENCE.md  README.md  REAL_FRONTEND_VERIFICATION.md  RETRY_FIXES_QUICK_GUIDE.md  RETRY_FIXES_REPORT.md  SOLUTION_SUMMARY.md  TASK_6_COMPLETION_REPORT.md  alembic.ini  auto_diagnose.py  build_db.py  check_orm_access.py  (+43 more)
(+517 files in other folders)
